--- a/app/views/admin/rooms/index.html.erb
+++ b/app/views/admin/rooms/index.html.erb
@@ -1,7 +1,7 @@
 <div class="mb-8">
   <div class="flex justify-between items-center mb-6">
     <h1 class="text-3xl font-bold text-gray-900 dark:text-white">Manage Rooms</h1>
-    <%= link_to "Add New Room", new_admin_room_path, class: "px-4 py-2 bg-teal-600 text-white rounded-lg hover:bg-teal-700 transition" %>
+    <%= link_to "Add New Room", new_admin_room_path, class: "px-4 py-2 bg-sky-600 text-white rounded-lg hover:bg-sky-700 transition" %>
   </div>
 
   <% if @rooms.any? %>
@@ -39,7 +39,7 @@
                 <% end %>
               </td>
               <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
-                <%= link_to "Edit", edit_admin_room_path(room), class: "text-teal-600 hover:text-teal-900 dark:text-teal-400 dark:hover:text-teal-300 mr-4" %>
+                <%= link_to "Edit", edit_admin_room_path(room), class: "text-sky-600 hover:text-sky-900 dark:text-sky-400 dark:hover:text-sky-300 mr-4" %>
                 <%= button_to "Delete", admin_room_path(room), method: :delete, data: { turbo_confirm: "Are you sure you want to delete this room?" }, class: "text-red-600 hover:text-red-900 dark:text-red-400 dark:hover:text-red-300" %>
               </td>
             </tr>
@@ -50,7 +50,7 @@
   <% else %>
     <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-8 text-center">
       <p class="text-gray-600 dark:text-gray-400 mb-4">No rooms have been added yet.</p>
-      <%= link_to "Add Your First Room", new_admin_room_path, class: "px-4 py-2 bg-teal-600 text-white rounded-lg hover:bg-teal-700 transition inline-block" %>
+      <%= link_to "Add Your First Room", new_admin_room_path, class: "px-4 py-2 bg-sky-600 text-white rounded-lg hover:bg-sky-700 transition inline-block" %>
     </div>
   <% end %>
 </div>
